--- a/omg-front/app/public/index.html
+++ b/omg-front/app/public/index.html
@@ -9,6 +9,26 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- Primary Meta Tags -->
+		<meta name="title" content="Oh My Girl Database">
+		<meta name="description" content="The collection of 'OH MY GIRL'">
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://ohmydb.com/">
+		<meta property="og:title" content="Oh My Girl Database">
+		<meta property="og:description" content="The collection of 'OH MY GIRL'">
+		<meta property="og:image" content="%PUBLIC_URL%/meta.jpg">
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://ohmydb.com/">
+		<meta property="twitter:title" content="Oh My Girl Database">
+		<meta property="twitter:description" content="The collection of 'OH MY GIRL'">
+		<meta property="twitter:image" content="%PUBLIC_URL%/meta.jpg">
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,10 +44,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <title>React App</title>
+    <title>Oh My DB</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
