--- a/front/public/index.html
+++ b/front/public/index.html
@@ -27,7 +27,27 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title itemprop="name">Horizon UI Dashboard</title>
+    <title itemprop="name">Oh My DB Dashboard</title>
+
+    <!-- Primary Meta Tags -->
+		<meta name="title" content="Oh My Girl Database">
+		<meta name="description" content="The collection of 'OH MY GIRL'">
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://ohmydb.com/">
+		<meta property="og:title" content="Oh My Girl Database">
+		<meta property="og:description" content="The collection of 'OH MY GIRL'">
+		<meta property="og:image" content="%PUBLIC_URL%/meta.jpg">
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://ohmydb.com/">
+		<meta property="twitter:title" content="Oh My Girl Database">
+		<meta property="twitter:description" content="The collection of 'OH MY GIRL'">
+		<meta property="twitter:image" content="%PUBLIC_URL%/meta.jpg">
+
+
     <!-- Manifest and apple icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
